--- a/AppPhone/app/src/main/res/layout/activity_main.xml
+++ b/AppPhone/app/src/main/res/layout/activity_main.xml
@@ -141,4 +141,15 @@
         app:layout_constraintStart_toStartOf="@+id/guideline2"
         app:layout_constraintTop_toBottomOf="@+id/btnTimSoDienThoai" />
 
+    <Button
+        android:id="@+id/btnDanhBa"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:text="Danh Bạ"
+        android:onClick="DanhBa"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/guideline"
+        app:layout_constraintTop_toBottomOf="@+id/btnXoa" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
