--- a/DanhBaVer3/app/src/main/res/layout/custom_item_danh_ba.xml
+++ b/DanhBaVer3/app/src/main/res/layout/custom_item_danh_ba.xml
@@ -17,7 +17,7 @@
             android:textColor="#F51010"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Khuong" />
+            android:text="name" />
 
         <TextView
             android:textColor="#333"
@@ -25,7 +25,7 @@
             android:textSize="20sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="0356241963" />
+            android:text="2334344" />
     </LinearLayout>
 
 </androidx.cardview.widget.CardView>
